fix overflow staff popup

--- a/src/pages/Owner/RegisterPopup/staffpopup.scss
+++ b/src/pages/Owner/RegisterPopup/staffpopup.scss
@@ -17,8 +17,7 @@
     visibility: visible;
     opacity: 1;
     z-index: 1000;
-    overflow: scroll;
-
+    // overflow: hidden;
 
     .popup {
         margin: 10px auto 10px;
@@ -52,12 +51,13 @@
             }
 
             .popup-form {
+                overflow: scroll;
                 padding: 10px 10% ;
                 // padding-top: 10px;
                 // padding-left: 6px;
                 // padding-bottom: 5px;
                 width: 80%;
-                height: auto;
+                height: 70vh;
                 // border: 1px solid #CFCFCF;
                 margin: 0 auto;
 
